--- a/WebContent/pages/cadastroAluno.xhtml
+++ b/WebContent/pages/cadastroAluno.xhtml
@@ -13,20 +13,18 @@
 	<h:form>
 		<h:panelGrid columns="2">
 			<h:outputText value="Matrícula:" />
-			<h:inputText value="#{servidorController.servidor.matricula}" />
+			<h:inputText value="#{alunoController.entity.matricula}" />
 
 			<h:outputText value="Nome:" />
-			<h:inputText value="#{servidorController.servidor.nome}" />
+			<h:inputText value="#{alunoController.entity.nome}" />
 
-			<h:outputText value="E-mail:" />
-			<h:inputText value="#{servidorController.servidor.email}" />
 		</h:panelGrid>
 
 
-		<h:commandButton value="Incluir" action="#{servidorController.salvar}" />
+		<h:commandButton value="Incluir" actionListener="#{alunoController.add}" />
 	</h:form>
 
-	<h:dataTable value="#{servidorController.listaServidor}" var="objeto">
+	<h:dataTable value="#{alunoController.listaAluno}" var="objeto">
 		<h:column>
 			<f:facet name="header">Id</f:facet>
     				#{objeto.id}
@@ -38,10 +36,6 @@
 		<h:column >
 			<f:facet name="header">Nome</f:facet>
     				#{objeto.nome}
-    		</h:column>
-		<h:column>
-			<f:facet name="header">E-mail</f:facet>
-    				#{objeto.email}
     		</h:column>
 	</h:dataTable>
 </h:body>
